syntax = "proto3";

option java_multiple_files = true;
option java_package = "dev.dgzn.hello.grpc";
option java_outer_classname = "HelloWorld";

service Greeter {
  rpc SayHelloOnce (HelloRequest) returns (HelloResponse) {}
}

message HelloRequest {
  optional string name = 1;
}

message HelloResponse {
  string message = 1;
}